BlockOnCylindrical: 1) crystal_maps z_start is now 0; 2) added recon_test/test_blocks_on_cylindrical_projectors, with test on symmetries; 3) for blocks, get_lor() now uses a STIR existing function instead of the one created by Parisa; 4) added tests to test_proj_data_info:run_Blocks_DOI_test(), run_lor_get_s_test(), run_coordinate_test(), run_coordinate_test_for_realistic_scanner().

--- a/src/recon_test/CMakeLists.txt
+++ b/src/recon_test/CMakeLists.txt
@@ -27,6 +27,7 @@ set(${dir_SIMPLE_TEST_EXE_SOURCES}
         test_FBP2D
         test_FBP3DRP
         test_priors
+        test_blocks_on_cylindrical_projectors
 )
 
 
