[CMake] add missing .cxx extensions in CMakeLists.txt
CMake now warns about this, and explicit extensions will become
mandatory, so let's fix them.

--- a/src/IO/CMakeLists.txt
+++ b/src/IO/CMakeLists.txt
@@ -19,7 +19,9 @@ set(${dir_LIB_SOURCES}
   OutputFileFormat.cxx
   OutputFileFormat_default.cxx
   InterfileOutputFileFormat.cxx
-  interfile InterfileHeader InterfilePDFSHeaderSPECT.cxx
+  interfile.cxx
+  InterfileHeader.cxx
+  InterfilePDFSHeaderSPECT.cxx
   InterfileHeaderSiemens.cxx
   InputFileFormatRegistry.cxx
   InterfileDynamicDiscretisedDensityOutputFileFormat.cxx
