--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -57,6 +57,7 @@ set(buildblock_simple_tests
 	test_ArcCorrection.cxx
 	test_find_fwhm_in_image.cxx
 	test_proj_data_info.cxx
+	test_proj_data_info_subsets.cxx
 	test_proj_data.cxx
 	test_proj_data_maths.cxx
 	test_export_array.cxx
