--- a/src/buildblock/CMakeLists.txt
+++ b/src/buildblock/CMakeLists.txt
@@ -88,6 +88,7 @@ set(${dir_LIB_SOURCES}
         GeneralisedPoissonNoiseGenerator.cxx
         FilePath.cxx
         date_time_functions.cxx
+        DetectorCoordinateMap.cxx
        GeometryBlocksOnCylindrical.cxx
         ProjDataInfoBlocksOnCylindricalNoArcCorr.cxx
         ProjDataInfoGeneric.cxx
