--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -58,6 +58,7 @@ set(buildblock_simple_tests
 	test_find_fwhm_in_image.cxx
         test_DetectionPosition.cxx
 	test_proj_data_info.cxx
+	test_DetectorCoordinateMap.cxx
 	test_proj_data.cxx
 	test_proj_data_maths.cxx
 	test_export_array.cxx
