[GHA] Use virtual env for Python but disable Python on MacOS
I cannot get numpy to work on MacOS

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -92,8 +92,23 @@ jobs:
               ;;
           esac
           echo PYTHON_EXECUTABLE="$PYTHON_EXECUTABLE" >> $GITHUB_ENV
-          #${PYTHON_EXECUTABLE} -m pip install -U pip
-          ${PYTHON_EXECUTABLE} -m pip install pytest numpy
+          ${PYTHON_EXECUTABLE} -m venv ${GITHUB_WORKSPACE}/my-env
+          source ${GITHUB_WORKSPACE}/my-env/bin/activate
+          #python -m pip install -U pip
+          case ${{matrix.os}} in
+            (macOS*)
+              # attempt to get round buggy Accelerate builds, see https://github.com/numpy/numpy/issues/15947
+              # but it didn't work, so commented out
+              # brew install openblas
+              # export OPENBLAS=$(brew --prefix openblas)
+              #python -m pip install --no-cache-dir --no-binary  numpy numpy # avoid the cached .whl!
+              python -m pip install numpy
+              ;;
+            (*)
+              python -m pip install numpy
+              ;;
+          esac
+          python -m pip install pytest
 
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1
@@ -107,6 +122,7 @@ jobs:
           BUILD_FLAGS: ${{ matrix.BUILD_FLAGS }}
       run: |
           set -ex
+          source ${GITHUB_WORKSPACE}/my-env/bin/activate
           #export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH"
           cmake --version
           if test "XX$CC" != "XX"; then
@@ -116,7 +132,7 @@ jobs:
           CMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install
           # make available to jobs below
           echo CMAKE_INSTALL_PREFIX="$CMAKE_INSTALL_PREFIX" >> $GITHUB_ENV
-          EXTRA_BUILD_FLAGS="-DBUILD_SWIG_PYTHON=ON -DPYTHON_EXECUTABLE=${PYTHON_EXECUTABLE}"
+          EXTRA_BUILD_FLAGS="-DBUILD_SWIG_PYTHON=ON -DPYTHON_EXECUTABLE=`which python`"
           EXTRA_BUILD_FLAGS="${EXTRA_BUILD_FLAGS} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${BUILD_TYPE}"
           echo "cmake flags $BUILD_FLAGS $EXTRA_BUILD_FLAGS"          
           mkdir build
@@ -127,8 +143,9 @@ jobs:
       shell: bash
       env:
           BUILD_TYPE: ${{ matrix.BUILD_TYPE }}
-      run: 
+      run: |
           cd ${GITHUB_WORKSPACE}/build;
+          source ${GITHUB_WORKSPACE}/my-env/bin/activate
           cmake --build . -j 2 --config ${BUILD_TYPE}} --target install
 
     - name: ctest
@@ -180,9 +197,16 @@ jobs:
       shell: bash
       run: |
           set -ex
+          source ${GITHUB_WORKSPACE}/my-env/bin/activate
           # Run Python tests, making sure we're using the correct Python interpreter
-          #export PYTHON_EXECUTABLE=$(cmake -LA -N ${GITHUB_WORKSPACE}/build |awk -F= '/PYTHON_EXECUTABLE/ {print $2}')
-          echo Using Python executable "$PYTHON_EXECUTABLE"
+          which python
           export PYTHONPATH=${CMAKE_INSTALL_PREFIX}/python
           cd ${GITHUB_WORKSPACE}/src
-          ${PYTHON_EXECUTABLE} -m pytest .
+          case ${{matrix.os}} in
+            (macOS*)
+              echo skipping pytest due to numpy problem for now.
+              ;;
+            (*)
+              python -m pytest .
+              ;;
+          esac
