--- a/src/test/numerics/CMakeLists.txt
+++ b/src/test/numerics/CMakeLists.txt
@@ -18,7 +18,7 @@ create_stir_test (test_IR_filters.cxx "" "")
 create_stir_test (test_BSplines.cxx "buildblock;IO;buildblock;numerics_buildblock;display" "")
 create_stir_test (test_BSplinesRegularGrid.cxx "buildblock;IO;buildblock;numerics_buildblock;display" "")
 create_stir_test (test_BSplinesRegularGrid1D.cxx "buildblock;IO;buildblock;numerics_buildblock;display" "")
-create_stir_test (test_erf.cxx "" "")
+create_stir_test (test_erf.cxx "buildblock;IO;buildblock;numerics_buildblock;display" "")
 create_stir_test (test_matrices.cxx "buildblock;IO;numerics_buildblock;buildblock;numerics_buildblock;display" "")
 create_stir_test (test_overlap_interpolate.cxx "buildblock;IO;buildblock;numerics_buildblock;display" "")
 create_stir_test (test_integrate_discrete_function.cxx "buildblock;IO;numerics_buildblock;display" "")
