--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,6 +30,6 @@ build_script:
 
 test_script:
   - cd C:\projects\stir\build
-  - ctest -VV -C %CONFIGURATION%
+  - ctest --output-on-failure  -C %CONFIGURATION%
   - cd ..\recon_test_pack
   - run_tests --nointbp "C:\projects\stir\install\bin\"
