--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -2,7 +2,7 @@
 #
 # Author: Kris Thielemans
 # Author Richard Brown
-# Copyright 2016, 2019, 2020 University College London
+# Copyright 2016, 2019, 2020, 2022 University College London
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -66,10 +66,15 @@ endif()
 
 if (@HDF5_FOUND@)
   message(STATUS "HDF5 support in STIR enabled.")
-  # should really look for CXX only, as that's all we need. However, this can create conflicts
-  # with current CMake, see https://gitlab.kitware.com/cmake/cmake/-/issues/20909
-  # find_package(HDF5 @HDF5_VERSION@ COMPONENTS CXX REQUIRED)
-  find_package(HDF5 @HDF5_VERSION@ REQUIRED)
+  if (CMAKE_VERSION VERSION_LESS 3.21.0)
+    # should really look for CXX only, as that's all we need. However, this can create conflicts
+    # with older CMake, see https://gitlab.kitware.com/cmake/cmake/-/issues/20909
+    # We try to work-around this by first looking for both C and CXX, and then only for CXX.
+    # Note that this only solves the problem if in the "client" code,
+    # find_package(STIR) is called BEFORE find_package(HDF5)
+    find_package(HDF5 @HDF5_VERSION@ COMPONENTS C CXX SILENT)
+  endif()
+  find_package(HDF5 @HDF5_VERSION@ COMPONENTS CXX REQUIRED)
   include_directories(${HDF5_INCLUDE_DIRS})
 
   set(STIR_BUILT_WITH_HDF5 TRUE)
