--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ endif()
 ####### Set Version number etc
 set(VERSION_MAJOR   5)
 set(VERSION_MINOR   0)
-set(VERSION_PATCH   0-prealpha)
+set(VERSION_PATCH   0)
 set(VERSION   050000) # only used in STIRConfig.h.in
 
 set(STIR_VERSION
