--- a/src/cmake/STIRConfig.h.in
+++ b/src/cmake/STIRConfig.h.in
@@ -88,5 +88,6 @@ namespace stir {
 #endif
 
 #cmakedefine STIR_PROJECTORS_AS_V3
+#cmakedefine STIR_ROOT_ROTATION_AS_V4
 #cmakedefine STIR_LEGACY_IGNORE_VIEW_OFFSET
 #endif //  __stir_config__H__
