[ci skip] Run only one test_view_offset_root test

--- a/src/recon_test/CMakeLists.txt
+++ b/src/recon_test/CMakeLists.txt
@@ -32,15 +32,13 @@ set(${dir_INVOLVED_TEST_EXE_SOURCES}
 )
 
 if (HAVE_CERN_ROOT)
+    # test_view_offset_root requires working directory to be examples/ROOT_files/ROOT_STIR_consistency
     list(APPEND ${dir_INVOLVED_TEST_EXE_SOURCES} test_view_offset_root)
-    foreach(n RANGE 1 12 1)
-        set(test_name test_consistency_root_${n})
-        ADD_TEST(NAME ${test_name}
-                WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/examples/ROOT_files/ROOT_STIR_consistency
-                COMMAND ${CMAKE_CURRENT_BINARY_DIR}/test_view_offset_root
-                ${CMAKE_SOURCE_DIR}/examples/ROOT_files/ROOT_STIR_consistency
-                )
-    endforeach()
+    set(test_name test_view_offset_root)
+    ADD_TEST(NAME ${test_name}
+            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/examples/ROOT_files/ROOT_STIR_consistency
+            COMMAND ${CMAKE_CURRENT_BINARY_DIR}/test_view_offset_root
+            )
 endif()
 
 include(stir_test_exe_targets)
