--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -19,24 +19,28 @@ jobs:
           BUILD_FLAGS: "-DSTIR_OPENMP=ON"
           BUILD_TYPE: "Release"
           parallelproj: "ON"
+          ROOT: "ON"
         - os: ubuntu-latest
           compiler: clang
           #compiler_version:
           BUILD_FLAGS: "-DSTIR_OPENMP=ON"
           BUILD_TYPE: "Release"
           parallelproj: "ON"
+          ROOT: "OFF"
         - os: ubuntu-latest
           compiler: gcc
           compiler_version: 10
           BUILD_FLAGS: "-DSTIR_OPENMP=ON"
           BUILD_TYPE: "Debug"
           parallelproj: "OFF"
+          ROOT: "OFF"
         - os: macOS-latest
           compiler: gcc
           compiler_version: 11
           BUILD_FLAGS: "-DSTIR_OPENMP=ON"
           BUILD_TYPE: "Release"
           parallelproj: "OFF"
+          ROOT: "OFF"
 
       # let's run all of them, as opposed to aborting when one fails
       fail-fast: false
@@ -129,7 +133,14 @@ jobs:
              cmake .. -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
              cmake --build . --target install --config Release
           fi
-          
+
+          # Install ROOT (warning: currently only valid on Ubuntu)
+          if test "${{matrix.ROOT}}XX" == "ONXX"; then
+             wget https://root.cern/download/root_v6.24.02.Linux-ubuntu20-x86_64-gcc9.3.tar.gz
+             tar -xzvf root_v6.24.02.Linux-ubuntu20-x86_64-gcc9.3.tar.gz
+             source root/bin/thisroot.sh
+          fi
+
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1
       with:
@@ -142,6 +153,9 @@ jobs:
           BUILD_FLAGS: ${{ matrix.BUILD_FLAGS }}
       run: |
           set -ex
+          if test "${{matrix.ROOT}}XX" == "ONXX"; then
+             source root/bin/thisroot.sh
+          fi
           source ${GITHUB_WORKSPACE}/my-env/bin/activate
           #export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH"
           cmake --version
@@ -173,6 +187,9 @@ jobs:
       env:
           BUILD_TYPE: ${{ matrix.BUILD_TYPE }}
       run: |
+          if test "${{matrix.ROOT}}XX" == "ONXX"; then
+             source root/bin/thisroot.sh
+          fi
           cd ${GITHUB_WORKSPACE}/build
           # don't run all of them in Debug mode as it takes too long
           if test ${BUILD_TYPE} = Debug; then
@@ -187,6 +204,9 @@ jobs:
           BUILD_TYPE: ${{ matrix.BUILD_TYPE }}
       run: |
           set -ex;
+          if test "${{matrix.ROOT}}XX" == "ONXX"; then
+             source root/bin/thisroot.sh
+          fi
           PATH=${CMAKE_INSTALL_PREFIX}/bin:$PATH
           cd ${GITHUB_WORKSPACE}/recon_test_pack
           ./run_tests.sh --nointbp
@@ -208,6 +228,9 @@ jobs:
       shell: bash
       run: |
           set -ex;
+          if test "${{matrix.ROOT}}XX" == "ONXX"; then
+             source root/bin/thisroot.sh
+          fi
           PATH=${CMAKE_INSTALL_PREFIX}/bin:$PATH
           # Run examples to see if they work
           cd ${GITHUB_WORKSPACE}/examples/PET_simulation
@@ -217,6 +240,9 @@ jobs:
       shell: bash
       run: |
           set -ex
+          if test "${{matrix.ROOT}}XX" == "ONXX"; then
+             source root/bin/thisroot.sh
+          fi
           source ${GITHUB_WORKSPACE}/my-env/bin/activate
           # Run Python tests, making sure we're using the correct Python interpreter
           which python
