--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,20 +27,20 @@ jobs:
           BUILD_TYPE: "Release"
           parallelproj: "ON"
           ROOT: "OFF"
-        - os: ubuntu-latest
-          compiler: gcc
-          compiler_version: 10
-          BUILD_FLAGS: "-DSTIR_OPENMP=ON"
-          BUILD_TYPE: "Debug"
-          parallelproj: "OFF"
-          ROOT: "OFF"
-        - os: macOS-latest
-          compiler: gcc
-          compiler_version: 11
-          BUILD_FLAGS: "-DSTIR_OPENMP=ON"
-          BUILD_TYPE: "Release"
-          parallelproj: "OFF"
-          ROOT: "OFF"
+        #- os: ubuntu-latest
+        #  compiler: gcc
+        #  compiler_version: 10
+        #  BUILD_FLAGS: "-DSTIR_OPENMP=ON"
+        #  BUILD_TYPE: "Debug"
+        #  parallelproj: "OFF"
+        #  ROOT: "OFF"
+        #- os: macOS-latest
+        #  compiler: gcc
+        #  compiler_version: 11
+        #  BUILD_FLAGS: "-DSTIR_OPENMP=ON"
+        #  BUILD_TYPE: "Release"
+        #  parallelproj: "OFF"
+        #  ROOT: "OFF"
 
       # let's run all of them, as opposed to aborting when one fails
       fail-fast: false
@@ -88,14 +88,10 @@ jobs:
               # other dependencies
               sudo apt install libboost-dev libhdf5-serial-dev swig python3-dev nlohmann-json3-dev
               PYTHON_EXECUTABLE=$(which python3)
-              # we'll install some dependencies with shared libraries, so need to let the OS know
-              echo LD_LIBRARY_PATH="${CMAKE_INSTALL_PREFIX}/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
               ;;
             (macOS*)
               brew install boost swig python nlohmann-json
               PYTHON_EXECUTABLE=$(which python3)
-              # we'll install some dependencies with shared libraries, so need to let the OS know
-              echo DYLD_FALLBACK_LIBRARY_PATH="${CMAKE_INSTALL_PREFIX}/lib:$DYLD_FALLBACK_LIBRARY_PATH" >> $GITHUB_ENV
               ;;
             (windows*)
               # this compiles the whole thing so takes ages
@@ -103,8 +99,6 @@ jobs:
               # swig is preinstalled and is currently not in vcpcg
               vcpkg list
               PYTHON_EXECUTABLE=$(which python3)
-              # we'll install some dependencies with shared libraries, so need to let the OS know
-              echo PATH="${CMAKE_INSTALL_PREFIX}/lib:$PATH" >> $GITHUB_ENV
               ;;
           esac
           echo PYTHON_EXECUTABLE="$PYTHON_EXECUTABLE" >> $GITHUB_ENV
@@ -132,6 +126,7 @@ jobs:
              cd parallelproj/build
              cmake .. -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
              cmake --build . --target install --config Release
+             cd ../..
           fi
 
           # Install ROOT (warning: currently only valid on Ubuntu)
@@ -140,6 +135,22 @@ jobs:
              tar -xzvf root_v6.24.02.Linux-ubuntu20-x86_64-gcc9.3.tar.gz
              source root/bin/thisroot.sh
           fi
+
+          # we'll install some dependencies with shared libraries, so need to let the OS know
+          # thisroot.sh also modified the path, so save that for the recon_test_pack
+          case ${{matrix.os}} in
+            (ubuntu*)
+              echo LD_LIBRARY_PATH="${CMAKE_INSTALL_PREFIX}/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+              echo PATH="$PATH" >> $GITHUB_ENV
+              ;;
+            (macOS*)
+              echo DYLD_FALLBACK_LIBRARY_PATH="${CMAKE_INSTALL_PREFIX}/lib:$DYLD_FALLBACK_LIBRARY_PATH" >> $GITHUB_ENV
+              echo PATH="$PATH" >> $GITHUB_ENV
+              ;;
+            (windows*)
+              echo PATH="${CMAKE_INSTALL_PREFIX}/lib:${CMAKE_INSTALL_PREFIX}/bin:$PATH" >> $GITHUB_ENV
+              ;;
+          esac
 
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1
@@ -153,9 +164,6 @@ jobs:
           BUILD_FLAGS: ${{ matrix.BUILD_FLAGS }}
       run: |
           set -ex
-          if test "${{matrix.ROOT}}XX" == "ONXX"; then
-             source root/bin/thisroot.sh
-          fi
           source ${GITHUB_WORKSPACE}/my-env/bin/activate
           #export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH"
           cmake --version
@@ -187,9 +195,6 @@ jobs:
       env:
           BUILD_TYPE: ${{ matrix.BUILD_TYPE }}
       run: |
-          if test "${{matrix.ROOT}}XX" == "ONXX"; then
-             source root/bin/thisroot.sh
-          fi
           cd ${GITHUB_WORKSPACE}/build
           # don't run all of them in Debug mode as it takes too long
           if test ${BUILD_TYPE} = Debug; then
@@ -204,9 +209,6 @@ jobs:
           BUILD_TYPE: ${{ matrix.BUILD_TYPE }}
       run: |
           set -ex;
-          if test "${{matrix.ROOT}}XX" == "ONXX"; then
-             source root/bin/thisroot.sh
-          fi
           PATH=${CMAKE_INSTALL_PREFIX}/bin:$PATH
           cd ${GITHUB_WORKSPACE}/recon_test_pack
           ./run_tests.sh --nointbp
@@ -228,9 +230,6 @@ jobs:
       shell: bash
       run: |
           set -ex;
-          if test "${{matrix.ROOT}}XX" == "ONXX"; then
-             source root/bin/thisroot.sh
-          fi
           PATH=${CMAKE_INSTALL_PREFIX}/bin:$PATH
           # Run examples to see if they work
           cd ${GITHUB_WORKSPACE}/examples/PET_simulation
@@ -240,9 +239,6 @@ jobs:
       shell: bash
       run: |
           set -ex
-          if test "${{matrix.ROOT}}XX" == "ONXX"; then
-             source root/bin/thisroot.sh
-          fi
           source ${GITHUB_WORKSPACE}/my-env/bin/activate
           # Run Python tests, making sure we're using the correct Python interpreter
           which python
