[GHA] restore all jobs [ci skip]

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,20 +27,20 @@ jobs:
           BUILD_TYPE: "Release"
           parallelproj: "ON"
           ROOT: "OFF"
-        #- os: ubuntu-latest
-        #  compiler: gcc
-        #  compiler_version: 10
-        #  BUILD_FLAGS: "-DSTIR_OPENMP=ON"
-        #  BUILD_TYPE: "Debug"
-        #  parallelproj: "OFF"
-        #  ROOT: "OFF"
-        #- os: macOS-latest
-        #  compiler: gcc
-        #  compiler_version: 11
-        #  BUILD_FLAGS: "-DSTIR_OPENMP=ON"
-        #  BUILD_TYPE: "Release"
-        #  parallelproj: "OFF"
-        #  ROOT: "OFF"
+        - os: ubuntu-latest
+          compiler: gcc
+          compiler_version: 10
+          BUILD_FLAGS: "-DSTIR_OPENMP=ON"
+          BUILD_TYPE: "Debug"
+          parallelproj: "OFF"
+          ROOT: "OFF"
+        - os: macOS-latest
+          compiler: gcc
+          compiler_version: 11
+          BUILD_FLAGS: "-DSTIR_OPENMP=ON"
+          BUILD_TYPE: "Release"
+          parallelproj: "OFF"
+          ROOT: "OFF"
 
       # let's run all of them, as opposed to aborting when one fails
       fail-fast: false
