--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Copyright (C) 2011-2012, Kris Thielemans
-# Copyright (C) 2013, University College London
+# Copyright (C) 2013-2022 University College London
 # This file is part of STIR.
 #
 # SPDX-License-Identifier: Apache-2.0
@@ -24,6 +24,7 @@ set(${dir_SIMPLE_TEST_EXE_SOURCES}
 
 set(${dir_SIMPLE_TEST_EXE_SOURCES_NO_REGISTRIES}
         test_DateTime.cxx
+        test_radionuclide.cxx
 )
 
 Set(${dir_INVOLVED_TEST_EXE_SOURCES}
