--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,8 @@ option(DISABLE_NLOHMANN_JSON "disable use of nlohmann JSON libraries" OFF)
 option(STIR_ENABLE_EXPERIMENTAL "disable use of STIR experimental code" OFF) # disable by default
 option(DISABLE_NiftyPET_PROJECTOR "disable use of NiftyPET projector" OFF)
 option(DISABLE_Parallelproj_PROJECTOR "disable use of Parallelproj projector" OFF)
+option(DISABLE_UPENN "disable use of UPENN filetypes" OFF)
+
 
 if(NOT DISABLE_ITK)
    # See if we can find a compiled version of ITK (http://www.itk.org/)
@@ -136,6 +138,26 @@ if(NOT DISABLE_NLOHMANN_JSON)
     else()
       message(STATUS "nlohmann JSON library not found. Try and set nlohmann_json_DIR if you have it.")
     endif()
+endif()
+
+if(NOT DISABLE_UPENN)
+	find_package(JANSSON)
+		if(JANSSON_FOUND)
+			find_package(ZLIB)
+			if(ZLIB_FOUND)
+				find_package(UPENN) 
+				if (UPENN_FOUND)
+					message(STATUS "UPENN libary found.")
+					#set(HAVE_UPENN ON)
+				else()
+					message(STATUS "UPENN library not found. Try and set the DIR manually.")
+				endif()
+			else()
+				message(STATUS "UPENN library needs Zlib")
+			endif()
+		else()
+			message(STATUS "UPENN library needs Jansson")
+		endif()
 endif()
 
 # Legacy options
