Cherry-pick of "Commit: f8b7b93c0d5ee8b5dcbafc8d890a317ebd54ab28 [f8b7b93]"
Make HU to mu translation accessible without requirement for nlohmann-json library. Expose InvertAxis.

--- a/src/buildblock/CMakeLists.txt
+++ b/src/buildblock/CMakeLists.txt
@@ -108,9 +108,9 @@ if (NOT HAVE_SYSTEM_GETOPT)
   list(APPEND ${dir_LIB_SOURCES} getopt.c)
 endif()
 
-if (HAVE_JSON)
+#if (HAVE_JSON)
   list(APPEND ${dir_LIB_SOURCES} HUToMuImageProcessor.cxx)
-endif()
+#endif()
 
 include(stir_lib_target)
 
