Fixed CMake files

--- a/src/IO/CMakeLists.txt
+++ b/src/IO/CMakeLists.txt
@@ -60,7 +60,7 @@ if (CERN_ROOT_FOUND)
  )
 endif()
 
-if (UPENN_FOUND) 
+if (UPENN_FOUND)
 list(APPEND ${dir_LIB_SOURCES}
 	InputStreamWithRecordsFromUPENN.cxx
 	InputStreamWithRecordsFromUPENNbin.cxx
@@ -107,6 +107,7 @@ if (ITK_FOUND)
 endif()
 
 if (UPENN_FOUND)
+  target_include_directories(IO PUBLIC ${UPENN_INCLUDE_DIR})
   target_link_libraries(IO ${UPENN_libsss_tof} ${UPENN_libfit} ${UPENN_libdist} ${UPENN_libgeom}
         ${UPENN_liblor} ${UPENN_liblist} ${UPENN_libmhdr} ${JANSSON_LIBRARY} ${ZLIB_LIBRARY_RELEASE}
 ${UPENN_libimagio} ${UPENN_libimagio++})
