--- a/src/utilities/UPENN/CMakeLists.txt
+++ b/src/utilities/UPENN/CMakeLists.txt
@@ -4,8 +4,8 @@ set(dir utilities/UPENN)
 
 set(dir_EXE_SOURCES ${dir}_EXE_SOURCES)
 
-set(${dir_EXE_SOURCES} ${UPENN_libgeom}
-            ${UPENN_liblor} ${UPENN_liblist}
-            ${UPENN_libmhdr} ${JANSSON_LIBRARY}
-            z ${UPENN_libimagio} ${UPENN_libimagio++}
-	    )
+#set(${dir_EXE_SOURCES} ${UPENN_libgeom}
+#            ${UPENN_liblor} ${UPENN_liblist}
+#            ${UPENN_libmhdr} ${JANSSON_LIBRARY}
+#            z ${UPENN_libimagio} ${UPENN_libimagio++}
+#	    )
