Added utility to convert UPENN projdata to STIR
* The utility can also decompress on-the-fly, introduce gaps

--- a/src/utilities/UPENN/CMakeLists.txt
+++ b/src/utilities/UPENN/CMakeLists.txt
@@ -4,8 +4,13 @@ set(dir utilities/UPENN)
 
 set(dir_EXE_SOURCES ${dir}_EXE_SOURCES)
 
-#set(${dir_EXE_SOURCES} ${UPENN_libgeom}
-#            ${UPENN_liblor} ${UPENN_liblist}
-#            ${UPENN_libmhdr} ${JANSSON_LIBRARY}
-#            z ${UPENN_libimagio} ${UPENN_libimagio++}
-#	    )
+add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
+
+set(${dir_EXE_SOURCES} 
+	conv_UPENN_projdata_to_STIR.cxx
+)
+
+include(stir_exe_targets)
+
+target_link_libraries(conv_UPENN_projdata_to_STIR ${UPENN_libgeom}
+    ${UPENN_liblor} ${UPENN_libimagio} ${UPENN_libimagio++} -lboost_system)
