--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -206,7 +206,7 @@ jobs:
           cd ${GITHUB_WORKSPACE}/build
           # don't run all of them in Debug mode as it takes too long
           if test ${BUILD_TYPE} = Debug; then
-              EXCLUDE="-E test_data_processor_projectors -E test_export_array -E test_ArcCorrection"
+              EXCLUDE="-E test_data_processor_projectors|test_export_array|test_ArcCorrection|test_blocks_on_cylindrical_projectors"
           fi
           ctest --output-on-failure -C ${BUILD_TYPE} ${EXCLUDE}
 
