--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -241,6 +241,10 @@ install(FILES "${CONF_INCLUDE_DIR}/stir/config.h" DESTINATION include/stir)
 
 #### install include files
 set (INCLUDE_DIR "${PROJECT_SOURCE_DIR}/src/include")
+
+add_compile_options(-fsanitize=address)
+add_link_options(-fsanitize=address)
+
 install(DIRECTORY "${INCLUDE_DIR}/" DESTINATION include)
 
 #### find header files for re-use in stir_exe_targets.cmake and doxygen target
