--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -43,7 +43,7 @@ jobs:
           compiler: gcc
           compiler_version: 11
           BUILD_FLAGS: "-DSTIR_OPENMP=ON"
-          BUILD_TYPE: "Release"
+          BUILD_TYPE: "Debug"
           parallelproj: "OFF"
           ROOT: "OFF"
 
