--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -207,7 +207,7 @@ jobs:
           if test ${BUILD_TYPE} = Debug; then
               EXCLUDE="-E test_data_processor_projectors|test_export_array|test_ArcCorrection|test_blocks_on_cylindrical_projectors"
           fi
-          ctest --output-on-failure -C ${BUILD_TYPE} ${EXCLUDE}
+          ctest -VVV -C ${BUILD_TYPE} ${EXCLUDE}
 
     - name: recon_test_pack
       shell: bash
