Set CXX14 (min) if ROOT Version >= 6.24
Newer ROOT version require min of C++14 - https://root.cern/install/build_from_source/#setting-the-c-standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,10 @@ if(NOT DISABLE_CERN_ROOT)
   find_package(CERN_ROOT)
   if (CERN_ROOT_FOUND)
     message(STATUS "ROOT Version: ${CERN_ROOT_VERSION}")
+    if (${CERN_ROOT_VERSION} VERSION_GREATER 6.23.99)
+        message(STATUS "ROOT Version is >= 6.24. Setting the minimum CXX version to 14.")
+        UseCXX(14)
+    endif()
   endif()
 endif()
 
